# gsearchapi

./: README.md  class_googleapi.py  issues  mgsearch.py  pyproject.toml  resultprop.py
