[build-system]
requires = ["setuptools>=61.0","requests"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_Madhav"
version = "0.0.1"
authors = [
  { name="Madhav Sivadasan", email="madhavsivadasan@gmail.com" },
]
description = "Package to return google search results in json format"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
